src/HotkeyParser.py
# Generated from ../../src/Hotkey.g4 by ANTLR 4.5.2
# encoding: utf-8
from antlr4 import *
from io import StringIO



class HotkeyParser ( Parser ):

    grammarFileName = "Hotkey.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'project'", "','", "';'", "'true'", "'false'", 
                     "'null'", "'namespace'", "'external_hotkey'", "'executable'", 
                     "'environment_variables'", "'working_directory'", "'internal_hotkey'", 
                     "'condition'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "EQUAL", "OPERATING_SYSTEM", 
                      "NAME", "STRING", "NUMBER", "WS" ]

    RULE_project = 0
    RULE_project_info = 1
    RULE_dictionary = 2
    RULE_pair = 3
    RULE_value = 4
    RULE_config = 5
    RULE_namespace = 6
    RULE_external_tool_hotkey = 7
    RULE_environment_vars = 8
    RULE_working_dir = 9
    RULE_custom_script_hotkey = 10
    RULE_simultaneous_condition = 11

    ruleNames =  [ "project", "project_info", "dictionary", "pair", "value", 
                   "config", "namespace", "external_tool_hotkey", "environment_vars", 
                   "working_dir", "custom_script_hotkey", "simultaneous_condition" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    EQUAL=14
    OPERATING_SYSTEM=15
    NAME=16
    STRING=17
    NUMBER=18
    WS=19

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProjectContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def project_info(self):
            return self.getTypedRuleContext(HotkeyParser.Project_infoContext,0)


        def config(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HotkeyParser.ConfigContext)
            else:
                return self.getTypedRuleContext(HotkeyParser.ConfigContext,i)


        def getRuleIndex(self):
            return HotkeyParser.RULE_project

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProject" ):
                listener.enterProject(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProject" ):
                listener.exitProject(self)




    def project(self):

        localctx = HotkeyParser.ProjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_project)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.project_info()
            self.state = 28
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==HotkeyParser.OPERATING_SYSTEM:
                self.state = 25
                self.config()
                self.state = 30
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Project_infoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(HotkeyParser.NAME, 0)

        def dictionary(self):
            return self.getTypedRuleContext(HotkeyParser.DictionaryContext,0)


        def getRuleIndex(self):
            return HotkeyParser.RULE_project_info

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProject_info" ):
                listener.enterProject_info(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProject_info" ):
                listener.exitProject_info(self)




    def project_info(self):

        localctx = HotkeyParser.Project_infoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_project_info)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.match(HotkeyParser.T__0)
            self.state = 32
            self.match(HotkeyParser.NAME)
            self.state = 33
            self.dictionary()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DictionaryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HotkeyParser.RULE_dictionary

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AnObjectContext(DictionaryContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HotkeyParser.DictionaryContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def pair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HotkeyParser.PairContext)
            else:
                return self.getTypedRuleContext(HotkeyParser.PairContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnObject" ):
                listener.enterAnObject(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnObject" ):
                listener.exitAnObject(self)


    class EmptyObjectContext(DictionaryContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HotkeyParser.DictionaryContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmptyObject" ):
                listener.enterEmptyObject(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmptyObject" ):
                listener.exitEmptyObject(self)



    def dictionary(self):

        localctx = HotkeyParser.DictionaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_dictionary)
        self._la = 0 # Token type
        try:
            self.state = 46
            token = self._input.LA(1)
            if token in [HotkeyParser.STRING]:
                localctx = HotkeyParser.AnObjectContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 35
                self.pair()
                self.state = 40
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==HotkeyParser.T__1:
                    self.state = 36
                    self.match(HotkeyParser.T__1)
                    self.state = 37
                    self.pair()
                    self.state = 42
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 43
                self.match(HotkeyParser.T__2)

            elif token in [HotkeyParser.T__2]:
                localctx = HotkeyParser.EmptyObjectContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.match(HotkeyParser.T__2)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PairContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(HotkeyParser.STRING, 0)

        def EQUAL(self):
            return self.getToken(HotkeyParser.EQUAL, 0)

        def value(self):
            return self.getTypedRuleContext(HotkeyParser.ValueContext,0)


        def getRuleIndex(self):
            return HotkeyParser.RULE_pair

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPair" ):
                listener.enterPair(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPair" ):
                listener.exitPair(self)




    def pair(self):

        localctx = HotkeyParser.PairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_pair)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(HotkeyParser.STRING)
            self.state = 49
            self.match(HotkeyParser.EQUAL)
            self.state = 50
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HotkeyParser.RULE_value

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StringContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HotkeyParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(HotkeyParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)


    class AtomContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HotkeyParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(HotkeyParser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)



    def value(self):

        localctx = HotkeyParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_value)
        try:
            self.state = 57
            token = self._input.LA(1)
            if token in [HotkeyParser.STRING]:
                localctx = HotkeyParser.StringContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.match(HotkeyParser.STRING)

            elif token in [HotkeyParser.NUMBER]:
                localctx = HotkeyParser.AtomContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.match(HotkeyParser.NUMBER)

            elif token in [HotkeyParser.T__3]:
                localctx = HotkeyParser.AtomContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.match(HotkeyParser.T__3)

            elif token in [HotkeyParser.T__4]:
                localctx = HotkeyParser.AtomContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 55
                self.match(HotkeyParser.T__4)

            elif token in [HotkeyParser.T__5]:
                localctx = HotkeyParser.AtomContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 56
                self.match(HotkeyParser.T__5)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConfigContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPERATING_SYSTEM(self):
            return self.getToken(HotkeyParser.OPERATING_SYSTEM, 0)

        def namespace(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HotkeyParser.NamespaceContext)
            else:
                return self.getTypedRuleContext(HotkeyParser.NamespaceContext,i)


        def external_tool_hotkey(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HotkeyParser.External_tool_hotkeyContext)
            else:
                return self.getTypedRuleContext(HotkeyParser.External_tool_hotkeyContext,i)


        def custom_script_hotkey(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HotkeyParser.Custom_script_hotkeyContext)
            else:
                return self.getTypedRuleContext(HotkeyParser.Custom_script_hotkeyContext,i)


        def getRuleIndex(self):
            return HotkeyParser.RULE_config

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfig" ):
                listener.enterConfig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfig" ):
                listener.exitConfig(self)




    def config(self):

        localctx = HotkeyParser.ConfigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_config)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(HotkeyParser.OPERATING_SYSTEM)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HotkeyParser.T__6) | (1 << HotkeyParser.T__7) | (1 << HotkeyParser.T__11))) != 0):
                self.state = 63
                token = self._input.LA(1)
                if token in [HotkeyParser.T__6]:
                    self.state = 60
                    self.namespace()

                elif token in [HotkeyParser.T__7]:
                    self.state = 61
                    self.external_tool_hotkey()

                elif token in [HotkeyParser.T__11]:
                    self.state = 62
                    self.custom_script_hotkey()

                else:
                    raise NoViableAltException(self)

                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(HotkeyParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NamespaceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(HotkeyParser.NAME, 0)

        def dictionary(self):
            return self.getTypedRuleContext(HotkeyParser.DictionaryContext,0)


        def getRuleIndex(self):
            return HotkeyParser.RULE_namespace

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamespace" ):
                listener.enterNamespace(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamespace" ):
                listener.exitNamespace(self)




    def namespace(self):

        localctx = HotkeyParser.NamespaceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_namespace)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(HotkeyParser.T__6)
            self.state = 73
            self.match(HotkeyParser.NAME)
            self.state = 74
            self.dictionary()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class External_tool_hotkeyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(HotkeyParser.NAME, 0)

        def simultaneous_condition(self):
            return self.getTypedRuleContext(HotkeyParser.Simultaneous_conditionContext,0)


        def EQUAL(self):
            return self.getToken(HotkeyParser.EQUAL, 0)

        def STRING(self):
            return self.getToken(HotkeyParser.STRING, 0)

        def environment_vars(self):
            return self.getTypedRuleContext(HotkeyParser.Environment_varsContext,0)


        def working_dir(self):
            return self.getTypedRuleContext(HotkeyParser.Working_dirContext,0)


        def getRuleIndex(self):
            return HotkeyParser.RULE_external_tool_hotkey

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExternal_tool_hotkey" ):
                listener.enterExternal_tool_hotkey(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExternal_tool_hotkey" ):
                listener.exitExternal_tool_hotkey(self)




    def external_tool_hotkey(self):

        localctx = HotkeyParser.External_tool_hotkeyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_external_tool_hotkey)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(HotkeyParser.T__7)
            self.state = 77
            self.match(HotkeyParser.NAME)
            self.state = 78
            self.simultaneous_condition()
            self.state = 80
            _la = self._input.LA(1)
            if _la==HotkeyParser.T__9:
                self.state = 79
                self.environment_vars()


            self.state = 83
            _la = self._input.LA(1)
            if _la==HotkeyParser.T__10:
                self.state = 82
                self.working_dir()


            self.state = 85
            self.match(HotkeyParser.T__8)
            self.state = 86
            self.match(HotkeyParser.EQUAL)
            self.state = 87
            self.match(HotkeyParser.STRING)
            self.state = 88
            self.match(HotkeyParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Environment_varsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dictionary(self):
            return self.getTypedRuleContext(HotkeyParser.DictionaryContext,0)


        def getRuleIndex(self):
            return HotkeyParser.RULE_environment_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnvironment_vars" ):
                listener.enterEnvironment_vars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnvironment_vars" ):
                listener.exitEnvironment_vars(self)




    def environment_vars(self):

        localctx = HotkeyParser.Environment_varsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_environment_vars)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(HotkeyParser.T__9)
            self.state = 91
            self.dictionary()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Working_dirContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQUAL(self):
            return self.getToken(HotkeyParser.EQUAL, 0)

        def STRING(self):
            return self.getToken(HotkeyParser.STRING, 0)

        def getRuleIndex(self):
            return HotkeyParser.RULE_working_dir

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWorking_dir" ):
                listener.enterWorking_dir(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWorking_dir" ):
                listener.exitWorking_dir(self)




    def working_dir(self):

        localctx = HotkeyParser.Working_dirContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_working_dir)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(HotkeyParser.T__10)
            self.state = 94
            self.match(HotkeyParser.EQUAL)
            self.state = 95
            self.match(HotkeyParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Custom_script_hotkeyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(HotkeyParser.NAME, 0)

        def simultaneous_condition(self):
            return self.getTypedRuleContext(HotkeyParser.Simultaneous_conditionContext,0)


        def EQUAL(self):
            return self.getToken(HotkeyParser.EQUAL, 0)

        def STRING(self):
            return self.getToken(HotkeyParser.STRING, 0)

        def getRuleIndex(self):
            return HotkeyParser.RULE_custom_script_hotkey

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCustom_script_hotkey" ):
                listener.enterCustom_script_hotkey(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCustom_script_hotkey" ):
                listener.exitCustom_script_hotkey(self)




    def custom_script_hotkey(self):

        localctx = HotkeyParser.Custom_script_hotkeyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_custom_script_hotkey)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(HotkeyParser.T__11)
            self.state = 98
            self.match(HotkeyParser.NAME)
            self.state = 99
            self.simultaneous_condition()
            self.state = 100
            self.match(HotkeyParser.T__8)
            self.state = 101
            self.match(HotkeyParser.EQUAL)
            self.state = 102
            self.match(HotkeyParser.STRING)
            self.state = 103
            self.match(HotkeyParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Simultaneous_conditionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(HotkeyParser.NAME)
            else:
                return self.getToken(HotkeyParser.NAME, i)

        def getRuleIndex(self):
            return HotkeyParser.RULE_simultaneous_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimultaneous_condition" ):
                listener.enterSimultaneous_condition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimultaneous_condition" ):
                listener.exitSimultaneous_condition(self)




    def simultaneous_condition(self):

        localctx = HotkeyParser.Simultaneous_conditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_simultaneous_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(HotkeyParser.T__12)
            self.state = 106
            self.match(HotkeyParser.NAME)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==HotkeyParser.T__1:
                self.state = 107
                self.match(HotkeyParser.T__1)
                self.state = 108
                self.match(HotkeyParser.NAME)
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





